--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,51 +32,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Te olvidaste amigo\n"
+     ]
+    }
+   ],
    "source": [
     "# Modify the code below:\n",
+    "try:\n",
+    "    print(some_string)\n",
     "\n",
-    "print(some_string)"
+    "except:\n",
+    "    print(\"Te olvidaste amigo\")\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "son formatos diferentes\n"
+     ]
+    }
+   ],
    "source": [
     "# Modify the code below:\n",
+    "try:\n",
+    "    \n",
+    "    for i in ['a','b','c']:\n",
+    "        print (i**2)\n",
     "\n",
-    "for i in ['a','b','c']:\n",
-    "    print (i**2)"
+    "except TypeError: \n",
+    "    print(\"son formatos diferentes\")\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "no puedes dividir entre '0'\n"
+     ]
+    }
+   ],
    "source": [
     "# Modify the code below:\n",
+    "try:\n",
+    "    x = 5\n",
+    "    y = 0\n",
     "\n",
-    "x = 5\n",
-    "y = 0\n",
-    "\n",
-    "z = x/y"
+    "    z = x/y\n",
+    "    \n",
+    "except ZeroDivisionError:\n",
+    "    print(\"no puedes dividir entre '0'\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "los indices son 0, 1 y 2\n"
+     ]
+    }
+   ],
    "source": [
     "# Modify the code below:\n",
-    "\n",
-    "abc=[10,20,20]\n",
-    "print(abc[3])"
+    "try:\n",
+    "    abc=[10,20,20]\n",
+    "    print(abc[3])\n",
+    "    \n",
+    "except IndexError:\n",
+    "    print(\"los indices son 0, 1 y 2\")\n"
    ]
   },
   {
@@ -92,20 +139,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "math domain error",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-5-04aad1ad646d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mmath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msqrt\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m \u001b[0msqrt_for_all\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-5-04aad1ad646d>\u001b[0m in \u001b[0;36msqrt_for_all\u001b[1;34m(x)\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[1;31m# Sample Input: -4\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m     \u001b[1;31m# Sample Output: 2.0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0mmath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msqrt\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[0msqrt_for_all\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: math domain error"
-     ]
+     "data": {
+      "text/plain": [
+       "2.0"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -118,27 +163,30 @@
     "    \n",
     "    # Sample Input: -4\n",
     "    # Sample Output: 2.0\n",
+    "    if x < 0:\n",
+    "        x = abs(x)\n",
+    "    else:\n",
+    "        pass\n",
+    "    \n",
     "    return math.sqrt(x)\n",
     "\n",
-    "sqrt_for_all(-1)"
+    "sqrt_for_all(-4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ZeroDivisionError",
-     "evalue": "division by zero",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-6-d7a9882673ba>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mx\u001b[0m \u001b[1;33m/\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m \u001b[0mdivide\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-6-d7a9882673ba>\u001b[0m in \u001b[0;36mdivide\u001b[1;34m(x, y)\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[1;31m# Sample Input: 5, 1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m     \u001b[1;31m# Sample Output: 5.0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0mx\u001b[0m \u001b[1;33m/\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[0mdivide\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mZeroDivisionError\u001b[0m: division by zero"
-     ]
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -151,27 +199,31 @@
     "    \n",
     "    # Sample Input: 5, 1\n",
     "    # Sample Output: 5.0\n",
-    "    return x / y\n",
     "\n",
-    "divide(5, 0)"
+    "    if y == 0:\n",
+    "        return 0\n",
+    "    else: \n",
+    "        return x / y   \n",
+    "\n",
+    "    \n",
+    "\n",
+    "divide(7, 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'int' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-7-19462e806ad7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     14\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0ma\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0melement\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0melement\u001b[0m \u001b[1;32min\u001b[0m \u001b[0ml\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 16\u001b[1;33m \u001b[0madd_elements\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m6\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-7-19462e806ad7>\u001b[0m in \u001b[0;36madd_elements\u001b[1;34m(a, l)\u001b[0m\n\u001b[0;32m     12\u001b[0m     \u001b[1;31m# Sample Input: 5, 6\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m     \u001b[1;31m# Sample Output: [11]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 14\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0ma\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0melement\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0melement\u001b[0m \u001b[1;32min\u001b[0m \u001b[0ml\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[0madd_elements\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m6\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'int' object is not iterable"
-     ]
+     "data": {
+      "text/plain": [
+       "[8]"
+      ]
+     },
+     "execution_count": 164,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -188,9 +240,29 @@
     "    \n",
     "    # Sample Input: 5, 6\n",
     "    # Sample Output: [11]\n",
-    "    return [a + element for element in l]\n",
+    "    if type(l)== list :\n",
+    "        return [a + element for element in l]\n",
+    "    elif type(a)== list:\n",
+    "        return [a + element for element in l]\n",
+    "    else : \n",
+    "        listatotal = []\n",
+    "        c = a + l\n",
+    "        listatotal.append(c)\n",
+    "        return listatotal\n",
+    "\n",
     "        \n",
-    "add_elements(5, 6)"
+    "        \n",
+    "        \n",
+    "add_elements(5,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
    ]
   },
   {
@@ -204,29 +276,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 165,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 165,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Modify the code below:\n",
     "\n",
     "l = [1,2,3,4]\n",
     "\n",
-    "sum([element + 1 for element in l]"
+    "sum([element + 1 for element in l])\n",
+    "\n",
+    "\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 166,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The current element in the loop is 1\n",
+      "The current element in the loop is 2\n",
+      "The current element in the loop is 3\n",
+      "The current element in the loop is 4\n"
+     ]
+    }
+   ],
    "source": [
     "# Modify the code below:\n",
     "\n",
     "l = [1,2,3,4]\n",
     "\n",
     "for element in l:\n",
-    "    print(\"The current element in the loop is\" + element)"
+    "    print(\"The current element in the loop is \" + str(element))"
    ]
   },
   {
@@ -240,9 +337,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 168,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3465735902799727"
+      ]
+     },
+     "execution_count": 168,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def log_square(x):\n",
     "    # This function takes a numeric value and returns the natural log of the square of the number \n",
@@ -255,14 +363,36 @@
     "    # Sample Input: 5\n",
     "    # Sample Output: 3.21887\n",
     "    \n",
-    "    # Your code here:"
+    "    # Your code here:\n",
+    "    if x == 0:\n",
+    "        raise ZeroDivisionError(\"el valor no puede ser 0 \")\n",
+    "    \n",
+    "    x = math.sqrt(x)\n",
+    "    x = math.log(x)\n",
+    "    \n",
+    "    return x\n",
+    "\n",
+    "log_square(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 171,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "es todo minuscula",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-171-a2db3f6ad47c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     14\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m \u001b[0mcheck_capital\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"aaaaa\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-171-a2db3f6ad47c>\u001b[0m in \u001b[0;36mcheck_capital\u001b[0;34m(x)\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0;31m# Your code here:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mislower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;32mTrue\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"es todo minuscula\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: es todo minuscula"
+     ]
+    }
+   ],
    "source": [
     "def check_capital(x):\n",
     "    # This function returns true if the string contains at least one capital letter and throws an error otherwise\n",
@@ -272,7 +402,14 @@
     "    # Sample Input: 'John'\n",
     "    # Sample Output: True\n",
     "    \n",
-    "    # Your code here:"
+    "    # Your code here:\n",
+    "    if x.islower() == True :\n",
+    "        raise ValueError(\"es todo minuscula\")\n",
+    "               \n",
+    "    else:\n",
+    "        return True\n",
+    "    \n",
+    "check_capital(\"aaaaa\")"
    ]
   },
   {
@@ -323,7 +460,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
